Fix #446: Add DataProfiler to ingestion and APIs